--- a/app/scss/pages/_home.scss
+++ b/app/scss/pages/_home.scss
@@ -67,6 +67,7 @@
                 &--home-2{
                     margin: initial;
                     left: initial;
+                    right: var(--space-9xl);
                 }
 
                 &--home-3{
